# applysurge

./: .env.example  .env.prod.example  .gitignore  DEPLOY.txt  Makefile  Overleaf.txt  Overleaf_v2.txt  audit-prompt.md  docker-compose.prod.yml  docker-compose.yml  job-agent-complete-prompt.md  questionnaire.txt  resume_bullets_final.txt  resume_code.tex  things.importantthings.txt
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.worker  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  encryption.py  exceptions.py  rate_limiter.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  agent_settings.py  analytics.py  application.py  billing.py  credentials.py  email_settings.py  email_template.py  job.py  job_match.py  notification.py  preferences.py  profile.py  resume.py  startup_contact.py  user.py
backend/app/schemas/: __init__.py  agent.py  analytics.py  application.py  billing.py  common.py  credentials.py  email.py  job.py  notification.py  preferences.py  profile.py  resume.py  startup.py  user.py
backend/app/services/: __init__.py  agent_service.py  analytics_service.py  application_service.py  auth_service.py  email_service.py  export_service.py  job_service.py  llm_service.py  (+7 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_jobs.py  test_scrapers.py  test_users.py
backend/worker/: __init__.py  celery_app.py
(+196 files in other folders)
